2006-08-26  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/ReflectionWriter.cs:
		Don't use seh tiny headers when the size can't fit in a byte.

	* Mono.Cecil.Cil/ReflectionWriter.cs:
		Fix a problem in the computation of the stack when the IL
		is somewhat strange.

2006-08-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyInfo.cs:
		Cecil 0.4.3 release.

2006-08-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Fix a bug in field initial values writing.

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Look for assemblies in ./ first

2006-08-17  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/BaseAssemblyResolver.cs:
		Resolve the corlib depending on its version.

	* Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/BaseAssemblyResolver.cs:
		Implement a AssemblyNameReference.Parse(string)

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Avoid infinite recursion.

	* Mono.Cecil/BaseAssemblyResolver.sc:
		Stay .net 1.1 compatible

2006-08-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IAssemblyResolver.cs
	  Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil/DefaultAssemblyResolver.cs
	  Mono.Cecil/AssemblyDefinition.cs
		Implement an assembly resolver.

	* Mono.Cecil/ReflectionReader.cs:
		Fix the initial value reading.
		Based on a report and a patch of Roei Erez  <roeie@mainsoft.com>

2006-08-15  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Fix the CopyTo method.

2006-07-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/IIndexedCollection.cs
	  CodeGen/templates/IndexedCollectionImplem.cs
	  Mono.Cecil/IConstructorCollection.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs: